tests/ui/or-patterns/or-patterns-syntactic-fail.stderr
error: expected identifier, found `:`
  --> $DIR/or-patterns-syntactic-fail.rs:11:19
   |
LL |     let _ = |A | B: E| ();
   |             ----  ^ expected identifier
   |             |
   |             while parsing the body of this closure
   |
help: you might have meant to open the body of the closure
   |
LL |     let _ = |A | { B: E| ();
   |                  +

error: function parameters require top-level or-patterns in parentheses
  --> $DIR/or-patterns-syntactic-fail.rs:18:13
   |
LL |     fn fun1(A | B: E) {}
   |             ^^^^^
   |
help: wrap the pattern in parentheses
   |
LL |     fn fun1((A | B): E) {}
   |             +     +

error: function parameters require top-level or-patterns in parentheses
  --> $DIR/or-patterns-syntactic-fail.rs:21:13
   |
LL |     fn fun2(| A | B: E) {}
   |             ^^^^^^^
   |
help: wrap the pattern in parentheses
   |
LL |     fn fun2((| A | B): E) {}
   |             +       +

error: `let` bindings require top-level or-patterns in parentheses
  --> $DIR/or-patterns-syntactic-fail.rs:26:9
   |
LL |     let A | B: E = A;
   |         ^^^^^
   |
help: wrap the pattern in parentheses
   |
LL |     let (A | B): E = A;
   |         +     +

error: `let` bindings require top-level or-patterns in parentheses
  --> $DIR/or-patterns-syntactic-fail.rs:29:9
   |
LL |     let | A | B: E = A;
   |         ^^^^^^^
   |
help: wrap the pattern in parentheses
   |
LL |     let (| A | B): E = A;
   |         +       +

error: aborting due to 5 previous errors

